--- a/Level1/Unit1/index.html
+++ b/Level1/Unit1/index.html
@@ -110,7 +110,7 @@
         /* Botão Teacher Resources ocupando duas colunas */
         .teacher-resources {
             grid-column: span 2;
-            display: none; /* Inicialmente escondido até a verificação do role */
+            display: none;
             justify-content: center;
             align-items: center;
             padding: 15px;
@@ -121,34 +121,35 @@
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
-        .teacher-resources img {
+        .robot-lex {
+            grid-column: span 2;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 15px;
+            background-color: #FFFFFF;
+            border: 2px solid #4CAF50;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .robot-lex img {
             width: 100%;
             height: auto;
             max-width: 130px;
         }
 
-        .teacher-resources:hover {
+        .robot-lex:hover {
             transform: scale(1.05);
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
         }
 
-        /* Responsividade para ajuste das colunas em telas pequenas */
-        @media (max-width: 412px) {
-            .activity-buttons {
-                grid-template-columns: repeat(2, 1fr); /* Mantém duas colunas até 412px */
-            }
-            .activity-button img,
-            .teacher-resources img {
-                max-width: 110px; /* Ajusta o tamanho da imagem em telas pequenas */
-            }
-        }
-
+        /* Responsividade para telas pequenas */
         @media (max-width: 400px) {
-            .activity-buttons {
-                grid-template-columns: 1fr; /* Coloca todos os botões em uma única coluna abaixo de 400px */
-            }
-            .teacher-resources {
-                grid-column: span 1; /* Ocupa toda a largura em telas muito pequenas */
+            .teacher-resources,
+            .robot-lex {
+                grid-column: span 1; /* Ocupa toda a largura em telas pequenas */
             }
         }
     </style>
@@ -157,12 +158,10 @@
     <div class="map-container">
         <header>
             <h1>Select an Activity</h1>
-            <!-- Botão Back posicionado logo abaixo do título -->
             <a href="../index.html" class="back-button">Back</a>
         </header>
         <main>
             <div class="activity-buttons">
-                <!-- Botão Teacher Resources ocupando duas colunas em telas grandes -->
                 <a href="teacher/index.html" class="teacher-resources">                        
                     <img src="../../imagens/resources.png" alt="Teacher Resources">
                 </a>
@@ -184,12 +183,14 @@
                 <a href="test.html" class="activity-button">
                     <img src="../../imagens/test.png" alt="Test">
                 </a>
-             </div>
+                <a href="../../Atividades/LEX/index.html" class="activity-button robot-lex">
+                    <img src="../../imagens/botoes/lex_button.png" alt="Robot Lex">
+                </a>
+            </div>
         </main>
     </div>
 
     <script>
-        // Função para verificar o role do usuário
         firebase.auth().onAuthStateChanged((user) => {
             if (user) {
                 const userId = user.uid;
