--- a/Level0/Unit2/index.html
+++ b/Level0/Unit2/index.html
@@ -110,7 +110,7 @@
         /* Botão Teacher Resources ocupando duas colunas */
         .teacher-resources {
             grid-column: span 2;
-            display: none;
+            display: none; /* Esconde por padrão, será exibido somente se for professor */
             justify-content: center;
             align-items: center;
             padding: 15px;
@@ -162,9 +162,12 @@
         </header>
         <main>
             <div class="activity-buttons">
+                <!-- Teacher Resources (exibido só para professor) -->
                 <a href="teacher/index.html" class="teacher-resources">                        
                     <img src="../../imagens/resources.png" alt="Teacher Resources">
                 </a>
+
+                <!-- Botões de Atividades -->
                 <a href="listening.html" class="activity-button">
                     <img src="../../imagens/listening.png" alt="Listening">
                 </a>
@@ -183,7 +186,10 @@
                 <a href="test.html" class="activity-button">
                     <img src="../../imagens/test.png" alt="Test">
                 </a>
-                <a href="../../Atividades/LEX/index.html" class="activity-button robot-lex">
+
+                <!-- Botão do Robot Lex -->
+                <!-- O href será injetado via JavaScript -->
+                <a href="#" class="activity-button robot-lex" id="robot-lex-link">
                     <img src="../../imagens/botoes/lex_button.png" alt="Robot Lex">
                 </a>
             </div>
@@ -191,6 +197,7 @@
     </div>
 
     <script>
+        // Verifica usuário no Firebase e exibe Teacher Resources se for professor ou proprietário
         firebase.auth().onAuthStateChanged((user) => {
             if (user) {
                 const userId = user.uid;
@@ -206,6 +213,26 @@
                 });
             } else {
                 console.log("Nenhum usuário autenticado");
+            }
+        });
+
+        // Ao carregar a página, pegamos Level e Unit do pathname e montamos a URL do robô
+        document.addEventListener("DOMContentLoaded", () => {
+            // Exemplo de pathname: "/Level0/Unit2/index.html"
+            // pathParts será [ "", "Level0", "Unit2", "index.html" ]
+            const pathParts = window.location.pathname.split("/");
+            const level = pathParts[1] || "Level1";
+            const unit  = pathParts[2] || "Unit1";
+
+            // Monta a URL do robô (sem fase):
+            // Se preferir caminho completo: 
+            // const robotUrl = `https://hannahenglishcourse.vercel.app/Atividades/LEX/index.html?level=${level}&unit=${unit}`;
+            const robotUrl = `../../Atividades/LEX/index.html?level=${level}&unit=${unit}`;
+
+            // Define o href do botão do Robot Lex
+            const robotLexLink = document.getElementById("robot-lex-link");
+            if (robotLexLink) {
+                robotLexLink.href = robotUrl;
             }
         });
     </script>
