--- a/Level0/Unit2/index.html
+++ b/Level0/Unit2/index.html
@@ -227,7 +227,7 @@
             // Monta a URL do robô (sem fase):
             // Se preferir caminho completo: 
             // const robotUrl = `https://hannahenglishcourse.vercel.app/Atividades/LEX/index.html?level=${level}&unit=${unit}`;
-            const robotUrl = `../../Atividades/LEX/index.html?level=${level}&unit=${unit}`;
+            const robotUrl = `Atividades/LEX/index.html?level=${level}&unit=${unit}`;
 
             // Define o href do botão do Robot Lex
             const robotLexLink = document.getElementById("robot-lex-link");
