--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -429,6 +429,8 @@ document.addEventListener('DOMContentLoaded', function () {
     loadTextFile();
     loadLessonContent();
     setupBackButton(); // Configura a lógica do botão Back
+    updateImagePath(); // Atualiza o caminho dinâmico da imagem
+    loadProfessorButtons();
 });
 
     function getLevelAndUnitFromURL() {
@@ -559,6 +561,24 @@ function getAuthenticatedUser() {
 
         img.src = imgPath;
     }
+}
+
+function updateImagePath() {
+    const { level, unit } = getLevelAndUnitFromURL();
+    const imagePath = `../../${level}/${unit}/DataGrammar/image.png`; // Caminho dinâmico para a imagem
+
+    const mainImage = document.getElementById('main-image');
+    fetch(imagePath)
+        .then(response => {
+            if (!response.ok) {
+                throw new Error(`Erro ao carregar a imagem: ${response.statusText}`);
+            }
+            mainImage.src = imagePath; // Atualiza o atributo src da imagem
+        })
+        .catch(error => {
+            console.error('Erro ao carregar a imagem:', error);
+            mainImage.src = 'default-image.png'; // Caminho para uma imagem padrão em caso de erro
+        });
 }
 
     document.addEventListener('DOMContentLoaded', function() {        
