--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -534,6 +534,8 @@ function getAuthenticatedUser() {
 
    function loadProfessorButtons() {
     const buttonContainer = document.querySelector('.button-container');
+    buttonContainer.innerHTML = ''; // Limpa o conteúdo do contêiner para evitar duplicação
+
     const maxProfessors = 10;
 
     // Obtém o level e unit da URL
@@ -550,7 +552,7 @@ function getAuthenticatedUser() {
             button.onclick = function() {
                 // Monta o caminho dinâmico para a aula do professor
                 const lessonPath = `../../${level}/${unit}/DataGrammar/aulas/aula${i}/index.html`;
-                window.location.href = lessonPath;  // Navega para o caminho correto
+                window.location.href = lessonPath; // Navega para o caminho correto
             };
             buttonContainer.appendChild(button);
         };
@@ -579,11 +581,7 @@ function updateImagePath() {
             console.error('Erro ao carregar a imagem:', error);
             mainImage.src = 'default-image.png'; // Caminho para uma imagem padrão em caso de erro
         });
-}
-
-    document.addEventListener('DOMContentLoaded', function() {        
-        loadProfessorButtons();
-    });
+}   
 </script>
 
 </body>
