--- a/Atividades/Exerciciosdegramatica/index.html
+++ b/Atividades/Exerciciosdegramatica/index.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah's Grammar Exercises</title>
     <style>
-        body {
+         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 20px;
-            line-height: 1.6;
-            background-image: url('fundo.png');
+            background-color: #ffffff;
+            background-image: url('../../../imagens/fundo.png');
             background-repeat: repeat;
             background-size: auto;
+            margin: 0;
+            padding: 0;
         }
         .container {
             max-width: 800px;
