--- a/Atividades/Exerciciosdegramatica/index.html
+++ b/Atividades/Exerciciosdegramatica/index.html
@@ -428,7 +428,7 @@
                     const [questionPart, answerPart] = trimmedLine.split('[Answer:');
                     const cleanAnswer = answerPart.replace(']', '').trim();
 
-                    // Verificar se existe algo como ___[size:small], [size:medium], [size:large], [size:huge]
+                    // Verificar se existe algo como ___[size:small], [size:medium], [size:large], [size:huge], [size:essay]
                     let inputSize = '150px'; // default
                     const sizeMatch = questionPart.match(/\[size:(.*?)\]/);
 
@@ -438,6 +438,7 @@
                         if (sizeValue === 'medium') inputSize = '150px'; 
                         if (sizeValue === 'large') inputSize = '300px'; 
                         if (sizeValue === 'huge') inputSize = '800px'; 
+                        if (sizeValue === 'essay') inputSize = '3200px'; 
                     }
 
                     // Remover [size:..] do texto a ser exibido
