--- a/Atividades/Exerciciosdegramatica/index - Copy.html
+++ b/Atividades/Exerciciosdegramatica/index - Copy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -67,21 +67,15 @@
             font-size: 1rem;
         }
 
-        /* Inputs e textareas */
         .answer-input {
             padding: 5px;
             border: 1px solid #ccc;
             border-radius: 5px;
             font-size: 1rem;
-            max-width: 100%; /* Responsividade: não ultrapassar a tela */
-            box-sizing: border-box; /* Garantir que padding conte no total */
-        }
-        textarea.answer-input {
-            resize: vertical; /* Permitimos redimensionar verticalmente se necessário */
         }
 
-        /* Botões */
-        #check-all-btn, #generate-pdf-btn {
+        /* Botão Check Answers preto, relevo, texto branco */
+        #check-all-btn {
             background-color: black;
             color: white;
             border: 2px solid #333;
@@ -91,9 +85,8 @@
             font-size: 1rem;
             box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
             margin-top: 20px;
-            margin-right: 10px;
         }
-        #check-all-btn:hover, #generate-pdf-btn:hover {
+        #check-all-btn:hover {
             background-color: #444;
         }
 
@@ -144,28 +137,6 @@
         .close-modal-btn:hover {
             background-color: #444;
         }
-
-        /* Ajustes de responsividade para telas pequenas */
-        @media (max-width: 600px) {
-            .container {
-                padding: 10px;
-            }
-            h1 {
-                font-size: 1.5rem;
-            }
-            .exercise-title {
-                font-size: 1.2rem;
-            }
-            .back-button {
-                font-size: 0.9rem;
-                padding: 8px 12px;
-            }
-            #check-all-btn, #generate-pdf-btn {
-                width: 100%;
-                margin-top: 10px;
-                margin-right: 0;
-            }
-        }
     </style>
 </head>
 <body>
@@ -178,8 +149,6 @@
 
     <!-- Botão único para checar TODAS as respostas -->
     <button id="check-all-btn" onclick="checkAllAnswers()">Check Answers</button>
-    <!-- Botão para gerar PDF -->
-    <button id="generate-pdf-btn" onclick="generatePDF()">Generate PDF</button>
 </div>
 
 <!-- Modal de conclusão -->
@@ -194,9 +163,6 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-
-<!-- jsPDF (UMD) -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 <script>
     // Configuração do Firebase
@@ -216,7 +182,6 @@
     let checkCount = 0;        // Conta quantas vezes o aluno clicou em "Check Answers".
     let allInputs = [];        // Guardaremos referência a todos os campos (objeto com input, answer e span)
     let userData = {};         // Informações do usuário logado (para ver se é aluno e se está atrelado a professor)
-    let linesFromFile = [];    // Guardamos as linhas do arquivo exercicios.txt para gerar o PDF sem respostas
 
     // Extrair parâmetros da URL
     function getParamsFromURL() {
@@ -353,6 +318,7 @@
                 // Certo
                 item.input.classList.remove('incorrect');
                 item.input.classList.add('correct');
+                // Não mostra a span de resposta certa agora, pois não há erro
                 item.correctAnswerSpan.style.display = 'none';
             } else {
                 // Errado
@@ -363,7 +329,7 @@
             }
         });
 
-        // 2) Se houver erros, verificar se usuário é "aluno" e atrelado a professor, então tocar alarme
+        // 2) Se houver erros, verificar se usuário é "aluno" e atrelado a professor, então toca o alarme
         if (!allCorrect) {
             if (
                 userData.role === 'aluno' &&
@@ -385,11 +351,22 @@
                 const userAnswer = item.input.value.trim().toLowerCase();
                 const correctAnswer = item.correctAnswer.trim().toLowerCase();
                 if (userAnswer !== correctAnswer) {
+                    // Exibir a resposta correta fora do input
                     item.correctAnswerSpan.textContent = `Right answer: ${item.correctAnswer}`;
                     item.correctAnswerSpan.style.display = 'inline';
                 }
             });
-            // Concluir a atividade
+
+            // Se ainda houver erros, não mudamos o input do aluno, mas marcamos todos como "correct" visual
+            // se quiser. Pela descrição, vamos manter a cor vermelha no input para ver o erro,
+            // mas agora exibe a "Right answer" do lado. Se preferir, comentar a linha abaixo:
+            //   item.input.classList.remove('incorrect');
+            //   item.input.classList.add('correct');
+            // mas vamos deixar como está para que fique claro qual errou.  
+
+            // Concluir a atividade (se for a regra final).
+            // Mas o enunciado diz: "Na próxima vez que apertar check answers vai marcar as respostas certas em azul e as erradas em vermelho e mostrar as respostas certas ... e depois disso concluir"
+            // Então concluímos aqui
             markPhaseCompleted();
             showModal();
 
@@ -417,13 +394,13 @@
             if (!response.ok) throw new Error(`Error loading file: ${basePath}exercicios.txt`);
 
             const data = await response.text();
-            linesFromFile = data.split('\n'); // Guardamos para o PDF também
+            const lines = data.split('\n');
 
             const exercisesDiv = document.getElementById('exercises');
             let htmlContent = '';
             allInputs = []; // reset
 
-            linesFromFile.forEach((line) => {
+            lines.forEach((line) => {
                 const trimmedLine = line.trim();
 
                 // 1) Capturar título (#TITLE: ...)
@@ -451,9 +428,8 @@
                     const [questionPart, answerPart] = trimmedLine.split('[Answer:');
                     const cleanAnswer = answerPart.replace(']', '').trim();
 
-                    // Verificar [size:small], [size:medium], [size:large], [size:huge], [size:essay]
+                    // Verificar se existe algo como ___[size:small], [size:medium], [size:large], [size:huge], [size:essay]
                     let inputSize = '150px'; // default
-                    let useTextarea = false;
                     const sizeMatch = questionPart.match(/\[size:(.*?)\]/);
 
                     if (sizeMatch) {
@@ -462,22 +438,13 @@
                         if (sizeValue === 'medium') inputSize = '150px'; 
                         if (sizeValue === 'large') inputSize = '300px'; 
                         if (sizeValue === 'huge') inputSize = '800px'; 
-                        if (sizeValue === 'essay') {
-                            useTextarea = true;
-                            // Largura 100% + rows
-                        }
+                        if (sizeValue === 'essay') inputSize = '3200px'; 
                     }
 
                     // Remover [size:..] do texto a ser exibido
                     let displayQuestion = questionPart.replace(/\[size:.*?\]/, '').trim();
-
-                    if (!useTextarea) {
-                        // Substituir o "___" por input
-                        displayQuestion = displayQuestion.replace('___', `<input type="text" class="answer-input" style="width:${inputSize};" />`);
-                    } else {
-                        // Substituir o "___" por textarea
-                        displayQuestion = displayQuestion.replace('___', `<textarea rows="4" class="answer-input" style="width:100%;"></textarea>`);
-                    }
+                    // Substituir o "___" pelo input
+                    displayQuestion = displayQuestion.replace('___', `<input type="text" class="answer-input" style="width:${inputSize};" />`);
 
                     // Gera HTML com um span oculto para exibir a resposta correta quando precisar
                     htmlContent += `
@@ -492,15 +459,15 @@
             // Injeta o HTML no container
             exercisesDiv.innerHTML = htmlContent;
 
-            // Mapear todos os inputs/areas com suas respostas corretas
+            // Mapear todos os inputs com suas respostas corretas
             let answerIndex = 0;
-            linesFromFile.forEach((line) => {
+            lines.forEach((line) => {
                 if (line.includes('[Answer:')) {
                     const [qPart, aPart] = line.split('[Answer:');
                     const correctAnswer = aPart.replace(']', '').trim();
 
                     // Localiza o input correspondente no DOM, na ordem que aparecem
-                    const inputElement = exercisesDiv.querySelectorAll('.answer-input')[answerIndex];
+                    const inputElement = exercisesDiv.querySelectorAll('input.answer-input')[answerIndex];
                     const spanElement = exercisesDiv.querySelectorAll('.correct-answer-span')[answerIndex];
 
                     if (inputElement && spanElement) {
@@ -518,109 +485,6 @@
             console.error("Error loading exercises:", error);
             document.getElementById('exercises').textContent = "Exercises could not be loaded.";
         }
-    }
-
-    // Função para gerar PDF (sem respostas), com layout personalizado
-    function generatePDF() {
-        const { jsPDF } = window.jspdf;
-        const doc = new jsPDF({
-            unit: "pt",
-            format: "a4",
-            hotfixes: ["px_scaling"]
-        });
-
-        const pageWidth = doc.internal.pageSize.getWidth();
-        const pageHeight = doc.internal.pageSize.getHeight();
-        let marginLeft = 40;
-        let marginTop = 60;
-        let currentY = marginTop;
-
-        // 1) Adicionar a logo (logo.png deve estar na mesma pasta)
-        // Tente ajustar as dimensões da imagem conforme necessário
-        // Se a imagem não for encontrada ou der erro no console, adapte o caminho.
-        doc.addImage("logo.png", "PNG", marginLeft, currentY, 80, 40);
-        currentY += 60;
-
-        // 2) Campos para "Name" e "Date"
-        doc.setFontSize(12);
-        doc.text("Name: ________________________________________________", marginLeft, currentY);
-        currentY += 20;
-        doc.text("Date: ____________", marginLeft, currentY);
-        currentY += 40;
-
-        // 3) Lê as linhas salvas em linesFromFile e imprime sem mostrar as respostas
-        //    Respeitando as quebras e adicionando linhas para o aluno responder.
-
-        // Função auxiliar para desenhar texto com quebra de linha e controle de página
-        function drawWrappedText(textLines, indent = 0) {
-            const lineHeight = 14; // px
-            const maxWidth = pageWidth - marginLeft * 2 - indent;
-            doc.setFontSize(12);
-
-            textLines.forEach((textLine) => {
-                const wrapped = doc.splitTextToSize(textLine, maxWidth);
-                wrapped.forEach((part) => {
-                    if (currentY + lineHeight > pageHeight - 40) {
-                        doc.addPage();
-                        currentY = marginTop;
-                    }
-                    doc.text(part, marginLeft + indent, currentY);
-                    currentY += lineHeight;
-                });
-            });
-        }
-
-        let lastTitle = ""; // Guardar último título (para não repetir)
-        linesFromFile.forEach((rawLine) => {
-            const line = rawLine.trim();
-
-            // Se for título
-            if (line.startsWith('#TITLE:')) {
-                let theTitle = line.replace('#TITLE:', '').trim();
-                lastTitle = theTitle;
-                // Exibir como título (fonte maior)
-                doc.setFontSize(14);
-                if (currentY + 20 > pageHeight - 40) {
-                    doc.addPage();
-                    currentY = marginTop;
-                }
-                doc.text(theTitle, marginLeft, currentY);
-                currentY += 25;
-                return;
-            }
-
-            // Se for "Exercise X:"
-            if (/^Exercise\s+\d+:/i.test(line)) {
-                // Subtítulo em negrito
-                doc.setFontSize(12);
-                doc.setFont(undefined, 'bold');
-                drawWrappedText([line]);
-                doc.setFont(undefined, 'normal');
-                return;
-            }
-
-            // Se a linha não tiver [Answer:], imprime normal
-            if (line && !line.includes('[Answer:')) {
-                drawWrappedText([line]);
-                return;
-            }
-
-            // Se tiver [Answer:], trocamos o input pela linha em branco
-            if (line.includes('[Answer:')) {
-                let [qPart] = line.split('[Answer:');
-                
-                // Remove [size:...] se existir
-                qPart = qPart.replace(/\[size:.*?\]/, '').trim();
-                // Substituir "___" por linhas
-                // Se quiser mais espaço, podemos colocar mais underlines
-                const questionText = qPart.replace('___', '____________________');
-                
-                drawWrappedText([questionText]);
-            }
-        });
-
-        // Por fim, gerar o PDF para download
-        doc.save(`${lastTitle || 'activity'}.pdf`);
     }
 
     // Ao carregar a página, primeiro nos certificamos de que o usuário está autenticado
