--- a/Atividades/Exerciciosdegramatica/index - Copy (3).html
+++ b/Atividades/Exerciciosdegramatica/index - Copy (3).html
@@ -65,14 +65,12 @@
         .exercise-line {
             margin: 10px 0;
             font-size: 1rem;
-            word-wrap: break-word; /* Garantir quebra de linha */
-            white-space: pre-wrap; /* Preservar quebras de linha */
         }
 
         /* Inputs e textareas */
         .answer-input {
             padding: 5px;
-            border: 1px solid #000; /* Bordas pretas */
+            border: 1px solid #ccc;
             border-radius: 5px;
             font-size: 1rem;
             max-width: 100%; /* Responsividade: não ultrapassar a tela */
@@ -166,12 +164,6 @@
                 width: 100%;
                 margin-top: 10px;
                 margin-right: 0;
-            }
-
-            /* Garantir que os elementos de texto quebrem corretamente */
-            .exercise-line {
-                font-size: 1rem; /* Manter tamanho da fonte */
-                word-break: break-word;
             }
         }
     </style>
@@ -628,32 +620,11 @@
 
                 // Se for "Exercise X:"
                 if (/^Exercise\s+\d+:/i.test(line)) {
-                    // Adicionar linha antes do título do exercício
-                    if (currentY + 10 > pageHeight - 40) {
-                        doc.addPage();
-                        currentY = marginTop;
-                    }
-                    doc.setDrawColor(0); // Preto
-                    doc.setLineWidth(1);
-                    doc.line(marginLeft, currentY, pageWidth - marginLeft, currentY);
-                    currentY += 10;
-
                     // Subtítulo em negrito
                     doc.setFontSize(12);
                     doc.setFont(undefined, 'bold');
                     drawWrappedText([line], 0, true); // Adiciona espaço extra após o exercício
                     doc.setFont(undefined, 'normal');
-
-                    // Adicionar linha após o título do exercício
-                    if (currentY + 10 > pageHeight - 40) {
-                        doc.addPage();
-                        currentY = marginTop;
-                    }
-                    doc.setDrawColor(0); // Preto
-                    doc.setLineWidth(1);
-                    doc.line(marginLeft, currentY, pageWidth - marginLeft, currentY);
-                    currentY += 10;
-
                     return;
                 }
 
