--- a/Atividades/Exerciciosdegramatica/index.html
+++ b/Atividades/Exerciciosdegramatica/index.html
@@ -65,8 +65,8 @@
         .exercise-line {
             margin: 10px 0;
             font-size: 1rem;
-            word-wrap: break-word; /* Garantir quebra de linha */
-            white-space: pre-wrap; /* Preservar quebras de linha */
+            word-break: break-word; /* Permitir quebra de palavra */
+            white-space: normal; /* Quebra de linha normal */
         }
 
         /* Inputs e textareas */
@@ -172,6 +172,7 @@
             .exercise-line {
                 font-size: 1rem; /* Manter tamanho da fonte */
                 word-break: break-word;
+                white-space: normal;
             }
         }
     </style>
@@ -606,7 +607,6 @@
             }
 
             let lastTitle = ""; // Guardar último título (para não repetir)
-            let isNewExercise = false;
 
             linesFromFile.forEach((rawLine) => {
                 let line = rawLine.trim();
@@ -628,38 +628,19 @@
 
                 // Se for "Exercise X:"
                 if (/^Exercise\s+\d+:/i.test(line)) {
-                    // Adicionar linha antes do título do exercício
-                    if (currentY + 10 > pageHeight - 40) {
-                        doc.addPage();
-                        currentY = marginTop;
-                    }
-                    doc.setDrawColor(0); // Preto
-                    doc.setLineWidth(1);
-                    doc.line(marginLeft, currentY, pageWidth - marginLeft, currentY);
-                    currentY += 10;
-
                     // Subtítulo em negrito
                     doc.setFontSize(12);
                     doc.setFont(undefined, 'bold');
-                    drawWrappedText([line], 0, true); // Adiciona espaço extra após o exercício
+                    drawWrappedText([line], 0, false); // Não adicionar espaço após o título
                     doc.setFont(undefined, 'normal');
-
-                    // Adicionar linha após o título do exercício
-                    if (currentY + 10 > pageHeight - 40) {
-                        doc.addPage();
-                        currentY = marginTop;
-                    }
-                    doc.setDrawColor(0); // Preto
-                    doc.setLineWidth(1);
-                    doc.line(marginLeft, currentY, pageWidth - marginLeft, currentY);
-                    currentY += 10;
+                    currentY += 10; // Adicionar espaço entre o título e o conteúdo
 
                     return;
                 }
 
                 // Se a linha não tiver [Answer:], imprime normal
                 if (line && !line.includes('[Answer:')) {
-                    drawWrappedText([line]);
+                    drawWrappedText([line], 0, false);
                     return;
                 }
 
@@ -673,7 +654,13 @@
                     // Se quiser mais espaço, podemos colocar mais underlines
                     const questionText = qPart.replace('___', '____________________');
                     
-                    drawWrappedText([questionText]);
+                    drawWrappedText([questionText], 0, false);
+                    currentY += 5; // Pequeno espaço após a linha
+                }
+
+                // Adicionar uma linha em branco após o exercício
+                if (/^Exercise\s+\d+:/i.test(line) === false && line === '') {
+                    drawWrappedText([''], 0, true);
                 }
             });
 
